--- a/app/assets/stylesheets/pages/_show_gear.scss
+++ b/app/assets/stylesheets/pages/_show_gear.scss
@@ -13,10 +13,10 @@
     display: flex;
     justify-content: space-around;
     background-color: black;
-    height: 60vh;
+    height: 65vh;
 
     .carousel-item {
-      height: 60vh;
+      height: 65vh;
     }
 
   }
@@ -24,4 +24,27 @@
   .right-show {
     width: 30vw;
   }
+}
+
+.carousel-image {
+  height: 100%;
+  width: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.category-span {
+  border: 1px solid #6c757d;
+  border-radius: 5px;
+  color: #6c757d;
+}
+
+.rent-btn {
+  background-color: #6c757d;
+  color: white;
+  border-radius: 5px;
+}
+
+.currency-symbol {
+  font-size: 16px;
 }
