--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="rental-details">
     <div class="create-banner">
-      <h1>Post your Listing</h1>
+      <h2 class="mb-4">Add your gear</h2>
     </div>
     <div class="listing-form">
       <%= render "form" %>
