--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,21 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+
+    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="<%= DEFAULT_META["twitter_account"] %>">
+    <meta name="twitter:title" content="<%= meta_title %>">
+    <meta name="twitter:description" content="<%= meta_description %>">
+    <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
+    <meta name="twitter:image:src" content="<%= meta_image %>">
+    
   </head>
 
   <body>
@@ -17,16 +32,4 @@
     </div>
     <%= render 'components/footer' %>
   </body>
-
-<!--   <script>
-     {/* nav bar active class */}
-    let navBtns = document.querySelectorAll('.nav-item');
-    for (let i = 0; i < navBtns.length; i++) {
-      console.log(navBtns);
-      navBtns[i].addEventListener('click', (e) => {
-        this.classList.toggle('.active');
-        this.nextSibling.classList.toggle('active');
-    })
-  };
-</script> -->
 </html>
